--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <div id = "main">
         <App></App>
     </div>
+    <a id="link" href="#">test xss</a>
+    <p id = "linkCon"></p>
     <script src='http://cdn.staticfile.org/jquery/2.1.1/jquery.min.js'></script>  
     <script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.core.js"></script>
 </body>
